Fix clipping issues
Setting body and html to height: 100%, then setting root to min-height,
while removing flexing on body does the trick.  Flex on body causes
issues with clipping and centering (likely due to stretching with Flex).

--- a/week05/my-app/src/App.css
+++ b/week05/my-app/src/App.css
@@ -50,7 +50,8 @@ table {
 /* Styling below */
 
 #root {
-  height: 100%;
+  min-height: 100%;
+  overflow: auto;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -59,7 +60,7 @@ table {
 }
 
 html, body {
-  min-height: 100%;
+  height: 100%;
   width: 100%;
   /* justify-content: center; */
   font-family: "Ubuntu", sans-serif;
